<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>manipulator_servo_driver</name>
  <version>0.0.0</version>
  <description>Interface for mks servo</description>
  <maintainer email="stanislav.svediroh@vut.cz">Stanislav Svědiroh</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <depend>python_driver_interfaces</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
